--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,7 @@
 			<name>Márcio Carmona</name>
 			<email>marciocarmona@gmail.com</email>
 			<organizationUrl>http://www.linkedin.com/in/marciocarmona</organizationUrl>
-			<roles>
-				<role>Developer</role>
+			<roles>				<role>Developer</role>
 			</roles>
 			<timezone>UTC-4</timezone>
 		</contributor>
